--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,76 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-.app {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+body {
+  background-color: #f0f0f0;
 }
 
 .image {
-  height: 200px;
-  width: 200px;
+  /* height: 200px;
+  width: 200px; */
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
   border-radius: 10px;
-  border: 1px solid black;
+  border: 1px solid #b4b4b3;
+  cursor: pointer;
 }
 
-.grid {
+.image::before,
+.image::after {
+  background-color: rgba(0, 0, 0, 0.5);
+  /* border-top: 32px solid rgba(0, 0, 0, 0.5);
+  border-bottom: 32px solid rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; */
+  content: "";
+  transition: all 0.3s ease;
+  z-index: 1;
+  opacity: 0;
+  transform: scaleY(2);
+}
+
+.image:hover::before,
+.image:hover::after {
+  transform: scale(1);
+  opacity: 1;
+}
+
+/* .image:nth-child(1) {
+  height: 500px;
+  width: 500px;
+} */
+
+.gallery-section {
+  background-color: white;
+  max-width: 1280px;
+  margin: 20px auto;
+  border-radius: 15px;
+}
+
+.gallery-section h1 {
+  padding: 1rem 2rem;
+  font-size: 1.8rem;
+  border-bottom: 1px solid #b4b4b3;
+}
+
+.gallery-layout {
   display: grid;
+  padding: 2rem;
   gap: 20px;
-  margin: 10px 0;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.featured-image:nth-child(1) {
+  grid-column: span 2;
+  grid-row: span 2;
 }
