--- a/src/index.css
+++ b/src/index.css
@@ -12,27 +12,16 @@ body {
 }
 
 .image {
-  /* height: 200px;
-  width: 200px; */
   max-width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
-  border: 1px solid #b4b4b3;
-  cursor: pointer;
 }
 
-.image::before,
+/* .image::before,
 .image::after {
-  background-color: rgba(0, 0, 0, 0.5);
-  /* border-top: 32px solid rgba(0, 0, 0, 0.5);
-  border-bottom: 32px solid rgba(0, 0, 0, 0.5);
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0; */
   content: "";
+  background-color: rgba(0, 0, 0, 0.5);
   transition: all 0.3s ease;
   z-index: 1;
   opacity: 0;
@@ -43,24 +32,46 @@ body {
 .image:hover::after {
   transform: scale(1);
   opacity: 1;
-}
-
-/* .image:nth-child(1) {
-  height: 500px;
-  width: 500px;
 } */
 
 .gallery-section {
   background-color: white;
-  max-width: 1280px;
+  max-width: 70vw;
   margin: 20px auto;
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
-.gallery-section h1 {
+.heading {
   padding: 1rem 2rem;
-  font-size: 1.8rem;
   border-bottom: 1px solid #b4b4b3;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.heading h1 {
+  font-size: 1.8rem;
+}
+.empty-state {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 40px 0;
+}
+
+.empty-state img {
+  max-width: 100%;
+}
+
+.delete-button {
+  border: none;
+  cursor: pointer;
+  height: fit-content;
+  background: transparent;
+  color: red;
+  font-size: 1.2rem;
 }
 
 .gallery-layout {
@@ -70,7 +81,129 @@ body {
   grid-template-columns: repeat(5, 1fr);
 }
 
+.featured-image {
+  border-radius: 12px;
+  border: 2px solid #b4b4b3;
+  position: relative;
+  display: inline-block;
+}
+
+.add-image {
+  border-radius: 10px;
+  border: 1px dashed #b4b4b3;
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  min-height: 143px;
+}
+
+.add-image-file {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.image-upload-icon {
+  height: 30px;
+  width: 30px;
+}
+
+.preview-image {
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.add-image input {
+  display: none;
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  padding: 0 10px;
+  box-sizing: border-box;
+  pointer-events: none;
+  border-radius: 10px;
+}
+
+.featured-image img {
+  display: block;
+  cursor: pointer;
+}
+
 .featured-image:nth-child(1) {
   grid-column: span 2;
   grid-row: span 2;
+}
+
+.featured-image:hover .image-overlay {
+  background: rgba(0, 0, 0, 0.6);
+  transition: all 0.4s linear;
+}
+
+.featured-image input {
+  display: none;
+}
+
+.featured-image input:checked + .image-overlay {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.featured-image input:checked + .image-overlay::after {
+  content: "✔";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 20px;
+  text-align: center;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+
+@media (max-width: 1480px) {
+  .gallery-layout {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 1024px) {
+  .gallery-layout {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .gallery-section {
+    max-width: 100vw;
+    margin: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .gallery-layout {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 480px) {
+  .gallery-layout {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .heading {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .empty-state {
+    font-size: 0.7rem;
+  }
 }
